[project]
name = "rps-flask"
version = "0.1.0"
description = ""
authors = [
    {name = "Tom-the-Human",email = "tomhodges83@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "cowsay (>=6.1,<7.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[tool.poetry]
packages = [{include = "rps_flask", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
